refactor: replace EndpointType with nested enum